More FAQ and settings subheaders. More info about template scenario.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -37,7 +37,7 @@ oarc-spawn-menu-shared-header=Join Another Spawn
 oarc-spawn-menu-buddy-header=Create A Buddy Spawn
 
 oarc-spawn-distance-slider-label=Distance From Map Center: 
-oarc-spawn-distance-slider-tooltip=This is the minimum distance from the center of the map in chunks that you will spawn. You may spawn further away if the map has already been explored.
+oarc-spawn-distance-slider-tooltip=This is the minimum distance from the center of the map in chunks that you will spawn. You may spawn further away if the map has already been explored. Resources and enemies are both more abundant the further you go from the center, but you will still be guaranteed a safe starting area.
 
 oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
 oarc-join-someone-dropdown-label=Select Shared Spawn:
@@ -217,6 +217,11 @@ oarc-settings-section-header-regrowth=Regrowth
 oarc-settings-section-header-general-spawn=General Spawn Area Config
 oarc-settings-section-header-resource-placement=Starting Resources Placement
 
+oarc-settings-section-subheader-spawn-choices=Spawn choices
+oarc-settings-section-subheader-difficulty-scaling=Enemy and resource scaling
+oarc-settings-section-subheader-gameplay-misc=Misc
+oarc-settings-section-subheader-sharing=Sharing and co-op
+
 oarc-settings-section-subheader-resource-placement-circular=For circle/octagon spawns
 oarc-settings-section-subheader-resource-placement-square=For square spawns
 
@@ -228,7 +233,9 @@ oarc-shared-chest-helper-txt=This connects to a shared storage chest for all pla
 oarc-mod-faq-what-is-this-mod=What is this mod?
 oarc-mod-faq-what-is-this-mod-answer=This mod overhauls multiplayer spawning. Players can create their own spawn points away from the center of the map. Players can also join other players' bases, or create buddy spawns. The mod does not change the core gameplay of Factorio, but it does change the way players start the game. The starting area is a preset area with resources, not a "natural" spawn point.
 oarc-mod-faq-other-surfaces=Can I start on a different surface/planet?
-oarc-mod-faq-other-surfaces-answer=[color=red]This feature is currently a work in progress. As such, only spawning on "nauvis" or a default nauvis-like surface will work correctly. Spawning on other surfaces may cause issues.[/color]
+oarc-mod-faq-other-surfaces-answer=[color=red]This feature is currently a work in progress. As such, only spawning on "nauvis" or a default nauvis-like surface will work correctly.[/color]
+oarc-mod-faq-secondary-spawns=What are secondary spawns?
+oarc-mod-faq-secondary-spawns-answer=If enabled, when a player first travels to a new surface that has custom spawning enabled, they will automatically be given a new starting area based on their primary spawn choice (the first spawn they create). [color=red]This feature is currently a work in progress. Secondary spawning on other surfaces may cause issues. Buddy and shared spawns are not implemented yet at this time.[/color]
 oarc-mod-faq-what-are-teams=What are the different team options?
 oarc-mod-faq-what-are-teams-answer=I wrote this mod for co-op play only, not pvp. Depending on the mod settings, you can either join the main team, which shares research, or create your own team, which has its own research tree. All teams/forces are friendly to each other and can communicate in chat and (optionally) share map vision. The only reason to create your own team is if you want to have your own research progress.
 oarc-mod-faq-shared-spawn=What is a shared spawn?
