Saving work on player list. Mostly working?

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -181,6 +181,7 @@ oarc-server-info-tab-title=Server Info
 oarc-spawn-ctrls-tab-title=Spawn Controls
 oarc-settings-tab-title=Settings
 oarc-mod-info-tab-title=Mod Info
+oarc-player-list-tab-title=Player List
 
 oarc-server-info-tab-welcome-msg-title=Welcome Message
 oarc-server-info-tab-discord-invite=Discord Invite:
@@ -196,6 +197,18 @@ oarc-server-info-button-restart-player=Restart Player
 oarc-player-not-found=Player __1__ is not found?
 oarc-player-about-to-spawn=Player __1__ is about to spawn, try again later.
 oarc-player-none-selected=No player selected!
+
+oarc-player-list-tab-column-header-player=Player
+oarc-player-list-tab-column-header-force=Team (Force)
+oarc-player-list-tab-column-header-surface=Home Surface
+oarc-player-list-tab-column-header-time-player=Time Played
+oarc-player-list-tab-column-header-location=Location
+oarc-player-list-tab-column-header-status=Status
+
+oarc-player-online=Online
+oarc-player-offline=Offline
+
+oarc-player-list-tab-location-button-tooltip=Click to show player location.
 
 
 oarc-settings-tab-title-mod-settings=Mod Settings
