Clean up player list. Should be good enough now.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -207,8 +207,9 @@ oarc-player-list-tab-column-header-status=Status
 
 oarc-player-online=Online
 oarc-player-offline=Offline
+oarc-player-waiting-to-spawn=Not Spawned Yet
 
-oarc-player-list-tab-location-button-tooltip=Click to show player location.
+oarc-player-list-tab-location-button-tooltip=Click to view map location.
 
 
 oarc-settings-tab-title-mod-settings=Mod Settings
