Saving my work for surface starting items and resources config GUI. Have the starting items working. Need to setup GUI for resources next.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -182,6 +182,7 @@ oarc-spawn-ctrls-tab-title=Spawn Controls
 oarc-settings-tab-title=Settings
 oarc-mod-info-tab-title=Mod Info
 oarc-player-list-tab-title=Player List
+oarc-surface-config-tab-title=Surface Config
 
 oarc-server-info-tab-welcome-msg-title=Welcome Message
 oarc-server-info-tab-discord-invite=Discord Invite:
