Added a way to export/import full settings via a serialized string.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -224,7 +224,11 @@ oarc-settings-tab-surface-regrowth-checkbox-tooltip=Enabling this will allow the
 oarc-settings-tab-surface-column-header=Surface
 oarc-settings-tab-surface-spawning-enabled=Custom Spawns
 oarc-settings-tab-surface-regrowth-enabled=Regrowth
-
+oarc-settings-tab-title-export=Import/Export Settings
+oarc-settings-tab-export-button=Export
+oarc-settings-tab-export-button-tooltip=Exports all settings to a string that can be shared with other players or saved for later.
+oarc-settings-tab-import-button=Import
+oarc-settings-tab-import-button-tooltip=Imports settings from a string. This will overwrite all settings with the imported values!
 
 oarc-settings-section-header-server-info=Server Info
 oarc-settings-section-header-gameplay=Gameplay
