Saving all tweaks to settings config GUI. Should be mostly done now. Fixed a bug with resource placement angle as well.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -216,7 +216,7 @@ oarc-player-list-tab-location-button-tooltip=Click to view map location.
 oarc-settings-tab-title-mod-settings=Mod Settings
 oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues!\nChanging settings will not modify existing spawns. BE CAREFUL!
 oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
-oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game.
+oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game. Check the Surface Config tab for surface-specific settings.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 oarc-settings-tab-title-surface=Surface Settings
 oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
