Return of the coin shop. Plus some cleanup of comments in the config.lua file with regards to the template scenario. Also bumping version number and starting changelog.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -38,6 +38,7 @@ oarc-mod-minimum-online-time=Minimum online time
 oarc-mod-respawn-cooldown-min=Reset respawn point cooldown
 oarc-mod-enable-shared-power=Shared power
 oarc-mod-enable-shared-chest=Shared chest
+oarc-mod-enable-coin-shop=Enable coin shop
 
 oarc-mod-enable-regrowth=Regrowth (map cleanup)
 oarc-mod-enable-world-eater=World eater (map cleanup - additional)
@@ -98,6 +99,7 @@ oarc-mod-minimum-online-time=The minimum time a player must be online before the
 oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they can change their spawn point to a new location.
 oarc-mod-enable-shared-power=This allows players to share their power network with other players. It will create a special power pole at their spawn point that connects to the shared power network wirelessly.
 oarc-mod-enable-shared-chest=This gives players a special chest they can use to share items with other players. It uses the "linked-chest" item that is a hidden feature in factorio.
+oarc-mod-enable-coin-shop=This enables a coin shop where players can buy items with coins they earn from killing biters.
 
 oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks over time. Any chunk with player structures will not be removed. This helps to keep the map (and file size) smaller over time.
 oarc-mod-enable-world-eater=Enables world eater. This requires regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
