--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -183,6 +183,7 @@ oarc-settings-tab-title=Settings
 oarc-mod-info-tab-title=Mod Info
 oarc-player-list-tab-title=Player List
 oarc-surface-config-tab-title=Surface Config
+oarc-item-shop-tab-title=[item=coin]Shop
 
 oarc-server-info-tab-welcome-msg-title=Welcome Message
 oarc-server-info-tab-discord-invite=Discord Invite:
