--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -32,8 +32,8 @@ oarc-mod-enable-secondary-spawns=Enable secondary spawns
 
 oarc-mod-scale-resources-around-spawns=Scale resources around spawns
 oarc-mod-modified-enemy-spawning=Scale enemies around spawns
-oarc-mod-modified-enemy-easy-evo=Easy enemy evolution
-oarc-mod-modified-enemy-medium-evo=Medium enemy evolution
+# oarc-mod-modified-enemy-easy-evo=Easy enemy evolution
+# oarc-mod-modified-enemy-medium-evo=Medium enemy evolution
 oarc-mod-minimum-online-time=Minimum online time
 oarc-mod-respawn-cooldown-min=Reset respawn point cooldown
 oarc-mod-enable-shared-power=Shared power
@@ -93,8 +93,8 @@ oarc-mod-enable-secondary-spawns=Enabling this will provide players with a secon
 
 oarc-mod-scale-resources-around-spawns=This scales resources around every spawn area so far away spawns aren't immediately next to very rich deposits.
 oarc-mod-modified-enemy-spawning=This scales the enemy spawning globally based on the allowed spawn distances to avoid every spawn being surrounded by behemoth worms.
-oarc-mod-modified-enemy-easy-evo=This is the maximum evolution that the enemies in the warning zone (closest) to a spawn will be FIXED at to ensure all players have a safe start! The warning zone area can be configured via the custom scenario.
-oarc-mod-modified-enemy-medium-evo=This is the maximum evolution that the enemies in the danger zone (next closest) to a spawn will be allowed to reach. Helps ensure players have a safe start! The danger zone area can be configured via the custom scenario.
+# oarc-mod-modified-enemy-easy-evo=This is the maximum evolution that the enemies in the warning zone (closest) to a spawn will be FIXED at to ensure all players have a safe start! The warning zone area can be configured via the custom scenario.
+# oarc-mod-modified-enemy-medium-evo=This is the maximum evolution that the enemies in the danger zone (next closest) to a spawn will be allowed to reach. Helps ensure players have a safe start! The danger zone area can be configured via the custom scenario.
 oarc-mod-minimum-online-time=The minimum time a player must be online before they leave, otherwise their spawn area will be cleaned up.
 oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they can change their spawn point to a new location.
 oarc-mod-enable-shared-power=This allows players to share their power network with other players. It will create a special power pole at their spawn point that connects to the shared power network wirelessly.
