--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -221,9 +221,11 @@ oarc-settings-tab-description=This tab contains the same mod settings in the mod
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 oarc-settings-tab-title-surface=Surface Settings
 oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
+oarc-settings-tab-surface-secondary-checkbox-tooltip=Enabling this will give players custom secondary spawns when they first travel to this surface. [color=red]This feature is currently a work in progress.[/color]
 oarc-settings-tab-surface-regrowth-checkbox-tooltip=Enabling this will allow the regrowth and world eater features to work on this surface, if those are enabled.
 oarc-settings-tab-surface-column-header=Surface
-oarc-settings-tab-surface-spawning-enabled=Custom Spawns
+oarc-settings-tab-surface-spawning-enabled=Home
+oarc-settings-tab-surface-secondary-enabled=Secondary
 oarc-settings-tab-surface-regrowth-enabled=Regrowth
 oarc-settings-tab-title-export=Import/Export Settings
 oarc-settings-tab-export-button=Export
