--- a/example/example-map-gen-settings.json
+++ b/example/example-map-gen-settings.json
@@ -1,24 +1,12 @@
 {
-  "_terrain_segmentation_comment": "Inverse of map scale",
-  "terrain_segmentation": 1,
-  
-  "_water_comment":
-  [
-    "Multiplier for water 'coverage' - higher increases the water level.",
-    "Water level = 10 * log2(this value)"
-  ],
-  "water": 1,
-  
   "_comment_width+height": "Width and height of map, in tiles; 0 means infinite",
-  "width": 1,
-  "height": 1,
+  "width": 0,
+  "height": 0,
   
   "_starting_area_comment": "Multiplier for 'biter free zone radius'",
   "starting_area": 1,
   
   "peaceful_mode": false,
-  
-  "default_enable_all_autoplace_controls": true,
 
   "autoplace_controls":
   {
@@ -28,22 +16,27 @@
     "stone"       : {"frequency" : 0.20, "richness" : 10.00, "size" : 0.20},
     "uranium-ore" : {"frequency" : 0.20, "richness" : 10.00, "size" : 0.20},
     "crude-oil"   : {"frequency" : 0.20, "richness" : 10.00, "size" : 0.20},
-    "trees"       : {"frequency" : 0.30, "richness" : 1.50, "size" : 1.00},
-    "enemy-base"  : {"frequency" : 0.40, "richness" : 0.50, "size" : 0.50}
+    "water"       : {"frequency": 1, "size": 1},
+    "trees"       : {"frequency": 1, "size": 1},
+    "enemy-base"  : {"frequency": 0.4, "size": 0.5}
   },
   
   "cliff_settings":
   {
     "_name_comment": "Name of the cliff prototype",
     "name": "cliff",
-    
+
     "_cliff_elevation_0_comment": "Elevation of first row of cliffs",
     "cliff_elevation_0": 10,
-    
-    "_cliff_elevation_interval_comment": "Elevation difference between successive rows of cliffs",
-    "cliff_elevation_interval": 10,
-    
-    "_richness_comment": "Multiplier for cliff continuity; 0 will result in no cliffs, 10 will make all cliff rows completely solid",
+
+    "_cliff_elevation_interval_comment":
+    [
+      "Elevation difference between successive rows of cliffs.",
+      "This is inversely proportional to 'frequency' in the map generation GUI. Specifically, when set from the GUI the value is 40 / frequency."
+    ],
+    "cliff_elevation_interval": 40,
+
+    "_richness_comment": "Called 'cliff continuity' in the map generator GUI. 0 will result in no cliffs, 10 will make all cliff rows completely solid",
     "richness": 1
   },
   
