--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -277,12 +277,12 @@ oarc-mod-faq-cleanup-abandoned=Was ist die Funktion „Aufräumen verlassener Ba
 oarc-mod-faq-cleanup-abandoned-answer=Dies entfernt das Spawn-Gebiet, wenn der Spieler innerhalb der „Mindest-Onlinestunden“ das Spiel verlässt und löscht auch seinen Charakter. Diese Funktion ist nützlich, um die Karte sauber zu halten und die Speicherdateigröße zu reduzieren. Öffentliche Server sollten diese Funktion wahrscheinlich aktivieren.
 oarc-mod-faq-offline-protection=Was ist die Funktion "Offline-Schutz"?
 oarc-mod-faq-offline-protection-answer=Wenn eine Basis keine Spieler online hat, wird sie vor feindlichen Angriffen geschützt. Dies ist nicht 100% garantiert, aber es hilft, die Basis zu schützen, wenn die Spieler offline sind.
-oarc-mod-faq-shared-power=Was ist die Funktion „Gemeinsame Stromversorgung“?
+oarc-mod-faq-shared-power=Was ist die Funktion „Gemeinschaftsstrom“?
 oarc-mod-faq-shared-power-answer=Dies ermöglicht es Spielern, ihr Stromnetz mit anderen Spielern zu teilen. Es wird ein spezieller Strommast an ihrem Spawn-Punkt erstellt, der drahtlos mit dem gemeinsamen Stromnetz verbunden ist. Es verwendet oberflächenübergreifende Strommasten, um „drahtlose“ Verbindungen herzustellen.
-oarc-mod-faq-shared-chest=Was ist die Funktion „Gemeinsame Truhe“?
-oarc-mod-faq-shared-chest-answer=Dies gibt Spielern eine spezielle Truhe an ihrem Spawn-Gebiet, die sie nutzen können, um Gegenstände sicher mit anderen Spielern zu teilen. Es verwendet die „Linked-Chest“, eine versteckte Funktion in Factorio. Dies ermöglicht es Spielern, sicher Gegenstände mit anderen zu teilen.
+oarc-mod-faq-shared-chest=Was ist die Funktion „Gemeinschaftstruhe“?
+oarc-mod-faq-shared-chest-answer=Dies gibt Spielern eine spezielle Truhe in ihrem Spawn-Gebiet, die sie nutzen können, um Gegenstände sicher mit anderen Spielern zu teilen. Es verwendet die „Linked-Chest“, eine versteckte Funktion in Factorio. Dies ermöglicht es Spielern, sicher Gegenstände mit anderen zu teilen.
 
 
 [entity-name]
-oarc-linked-chest=OARC-Verbundtruhe
-oarc-linked-power=OARC-Verbundstrom
+oarc-linked-chest=OARC Gemeinschaftstruhe
+oarc-linked-power=OARC Gemeinschaftsstrom
