Exposing friendly and cease fire in mod settings. I guess PvP is now technically supported?

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -22,6 +22,8 @@ oarc-mod-enable-buddy-spawn=Enable buddy spawn
 oarc-mod-enable-offline-protection=Offline protection
 oarc-mod-enable-shared-team-vision=Shared team vision
 oarc-mod-enable-shared-team-chat=Shared team chat
+oarc-mod-enable-friendly-teams=Friendly teams
+oarc-mod-enable-cease-fire=Cease fire teams
 oarc-mod-enable-shared-spawns=Shared spawns
 oarc-mod-number-of-players-per-shared-spawn=Number of players per shared spawn
 oarc-mod-enable-friendly-fire=Enable friendly fire
@@ -81,8 +83,10 @@ oarc-mod-far-spawn-distance=The maximum distance a player can choose to spawn fr
 
 oarc-mod-enable-buddy-spawn=Allow spawning with a buddy. 2 players can spawn next to each other with their own starting areas.
 oarc-mod-enable-offline-protection=This inhibits enemy attacks on bases where all players are offline. Not 100% guaranteed!
-oarc-mod-enable-shared-team-vision=Makes sure all teams can see each other's map and radar coverage.
+oarc-mod-enable-shared-team-vision=Makes sure all teams can see each other's map and radar coverage. This requires friendly teams!
 oarc-mod-enable-shared-team-chat=All teams can see each other's chat messages.
+oarc-mod-enable-friendly-teams=All teams are friendly to each other. Friends have unrestricted access to buildings and turrets won't fire at them.
+oarc-mod-enable-cease-fire=All teams are at cease fire. Turrets will not fire at other teams.
 oarc-mod-enable-shared-spawns=Allow players to share their spawn areas for other players to join.
 oarc-mod-number-of-players-per-shared-spawn=Number of players that can join a shared spawn, including the original player.
 oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chests (or run over your friends with a train). This lets you damage your OWN team.
