Should fix a LOT of cases where player was used instead of player.character. Add broadcast for when player changes surfaces and platforms.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -78,6 +78,8 @@ oarc-generating-spawn-please-wait=Generating your spawn now, please wait...
 oarc-host-left-new-host=__1__ has left so __2__ now owns their base.
 oarc-new-owner-msg=You have been given ownership of this base!
 
+oarc-player-changed-surface=__1__ is now on __2__!
+oarc-player-on-platform=__1__ is now on platform: __2__!
 
 oarc-looking-for-buddy=__1__ is looking for a buddy.
 
@@ -122,6 +124,8 @@ oarc-shared-spawn-full=Your base is full! No more players can join.
 
 oarc-set-respawn-loc-header=Respawn Location
 oarc-no-respawn-this-surface=You cannot set a custom respawn location on this surface.
+oarc-no-valid-player-character=Coudn't find a valid character attached to the player!
+oarc-player-character-in-vehicle=Player must not be in a vehicle to use this!
 oarc-set-respawn-loc-info-surface-label=Current Surface Respawn: __1__ (x=__2__, y=__3__)
 oarc-set-respawn-loc=Set Respawn Location
 oarc-set-respawn-loc-tooltip=This will set your respawn point to your current location. There is a cooldown before you can change it again. You can only set this on supported surfaces.
