--- a/locale/zh-CN/locale-mod-settings.cfg
+++ b/locale/zh-CN/locale-mod-settings.cfg
@@ -1,124 +1,109 @@
 [mod-description]
-oarc-mod=This is a multiplayer mod that allows every player to create their own spawn point when they join the game. There are a lot of helpful features to ensure that new players can join at anytime in the game or even join other player's spawn areas.\n\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]\n\n[font=default-small]This USED to be available as a scenario, but now is only provided as a mod. To start a new game with this mod, just use the default freeplay scenario. The scenario included in this mod only provides a template to overwrite the default freeplay scenario. It also provides a way for experienced server hosts to configure settings from a file instead of through the usual mod settings. Please read the control.lua file inside the scenario for notes.[/font]
+oarc-mod=这是一个多人模组，允许每个玩家在加入游戏时创建自己的出生点。这个模组提供了许多实用功能，确保新玩家可以随时加入游戏，甚至可以加入其他玩家的出生区域。\n\n[color=red][font=default-bold]请查看GitHub页面和Discord获取更多信息和支持。[/font][/color]\n\n[font=default-small]这个模组曾经以场景的形式提供，现在仅作为模组提供。要使用此模组开始新游戏，只需使用默认的自由游戏场景。模组中包含的场景仅提供一个覆盖默认自由游戏场景的模板。它还为经验丰富的服务器管理员提供了通过文件而非常规模组设置来配置设置的方法。请阅读场景中的control.lua文件以获取更多说明。[/font]
+
+
+
 
 [mod-setting-name]
-oarc-mod-default-allow-spawning-on-other-surfaces=Default to allow spawns on other surfaces
-oarc-mod-linked-chest-size=Sharing chest capacity
-
-oarc-mod-welcome-msg-title=Welcome message title
-oarc-mod-welcome-msg=Welcome message
-oarc-mod-discord-invite=Discord Invite
-
-oarc-mod-enable-main-team=Enable main team
-oarc-mod-enable-separate-teams=Enable separate teams
-
-oarc-mod-allow-moats-around-spawns=Allow moats around spawns
-oarc-mod-enable-moat-bridging=Moat bridges
-oarc-mod-minimum-distance-to-existing-chunks=Minimum distance to existing chunks
-oarc-mod-near-spawn-distance=Spawn minimum distance
-oarc-mod-far-spawn-distance=Spawn maximum distance
-
-oarc-mod-enable-buddy-spawn=Enable buddy spawn
-oarc-mod-enable-offline-protection=Offline protection
-oarc-mod-enable-shared-team-vision=Shared team vision
-oarc-mod-enable-shared-team-chat=Shared team chat
-oarc-mod-enable-shared-spawns=Shared spawns
-oarc-mod-number-of-players-per-shared-spawn=Number of players per shared spawn
-oarc-mod-enable-friendly-fire=Enable friendly fire
-
-oarc-mod-main-force-name=Main force name
-oarc-mod-default-surface=Default starting surface
-oarc-mod-enable-secondary-spawns=Enable secondary spawns
-
-oarc-mod-scale-resources-around-spawns=Scale resources around spawns
-oarc-mod-modified-enemy-spawning=Scale enemies around spawns
-# oarc-mod-modified-enemy-easy-evo=Easy enemy evolution
-# oarc-mod-modified-enemy-medium-evo=Medium enemy evolution
-oarc-mod-minimum-online-time=Minimum online time
-oarc-mod-respawn-cooldown-min=Reset respawn point cooldown
-oarc-mod-enable-shared-power=Shared power
-oarc-mod-enable-shared-chest=Shared chest
-oarc-mod-enable-coin-shop=Enable coin shop
-
-oarc-mod-enable-regrowth=Regrowth (map cleanup)
-oarc-mod-enable-world-eater=World eater (map cleanup - additional)
-oarc-mod-enable-abandoned-base-cleanup=Cleanup abandoned bases
-oarc-mod-regrowth-cleanup-interval-min=Regrowth cleanup interval
-
-oarc-mod-spawn-general-radius-tiles=Spawn area radius
-oarc-mod-spawn-general-moat-width-tiles=Spawn moat width
-oarc-mod-spawn-general-tree-width-tiles=Spawn tree ring width
-oarc-mod-spawn-general-enable-resources-circle-shape=Spawn resource deposits shape
-oarc-mod-spawn-general-enable-force-grass=Force spawn area grass
-oarc-mod-spawn-general-shape=Spawn area shape
-
-oarc-mod-resource-placement-enabled=Starting resource auto placement
-oarc-mod-resource-placement-distance-to-edge=Starting resource distance to edge
-oarc-mod-resource-placement-degrees-offset=Starting resource angle offset
-oarc-mod-resource-placement-degrees-final=Starting resource angle final
-oarc-mod-resource-placement-vertical-offset=Starting resource vertical offset
-oarc-mod-resource-placement-horizontal-offset=Starting resource horizontal offset
-oarc-mod-resource-placement-linear-spacing=Starting resource linear spacing
-oarc-mod-resource-placement-size-multiplier=Starting resource size multiplier
-oarc-mod-resource-placement-amount-multiplier=Starting resource amount multiplier
+oarc-mod-default-allow-spawning-on-other-surfaces=默认允许在其他表面出生
+oarc-mod-linked-chest-size=共享箱子容量
+oarc-mod-welcome-msg-title=欢迎消息标题
+oarc-mod-welcome-msg=欢迎消息
+oarc-mod-discord-invite=Discord邀请链接
+oarc-mod-enable-main-team=启用主队伍
+oarc-mod-enable-separate-teams=启用独立队伍
+oarc-mod-allow-moats-around-spawns=允许出生点周围有护城河
+oarc-mod-enable-moat-bridging=护城河桥梁
+oarc-mod-minimum-distance-to-existing-chunks=与现有区块的最小距离
+oarc-mod-near-spawn-distance=出生点最小距离
+oarc-mod-far-spawn-distance=出生点最大距离
+oarc-mod-enable-buddy-spawn=启用伙伴出生
+oarc-mod-enable-offline-protection=离线保护
+oarc-mod-enable-shared-team-vision=共享队伍视野
+oarc-mod-enable-shared-team-chat=共享队伍聊天
+oarc-mod-enable-shared-spawns=共享出生点
+oarc-mod-number-of-players-per-shared-spawn=每个共享出生点的玩家数量
+oarc-mod-enable-friendly-fire=启用友军伤害
+oarc-mod-main-force-name=主队伍名称
+oarc-mod-default-surface=默认起始表面
+oarc-mod-enable-secondary-spawns=启用次要出生点
+oarc-mod-scale-resources-around-spawns=根据出生点缩放资源
+oarc-mod-modified-enemy-spawning=根据出生点缩放敌人
+oarc-mod-modified-enemy-easy-evo=简单敌人进化
+oarc-mod-modified-enemy-medium-evo=中等敌人进化
+oarc-mod-minimum-online-time=最小在线时间
+oarc-mod-respawn-cooldown-min=重置出生点冷却时间
+oarc-mod-enable-shared-power=共享电力
+oarc-mod-enable-shared-chest=共享箱子
+oarc-mod-enable-coin-shop=启用硬币商店
+oarc-mod-enable-regrowth=重生（地图清理）
+oarc-mod-enable-world-eater=世界吞噬者（地图清理 - 额外）
+oarc-mod-enable-abandoned-base-cleanup=清理废弃基地
+oarc-mod-regrowth-cleanup-interval-min=重生清理间隔
+oarc-mod-spawn-general-radius-tiles=出生区域半径
+oarc-mod-spawn-general-moat-width-tiles=出生点护城河宽度
+oarc-mod-spawn-general-tree-width-tiles=出生点树木环宽度
+oarc-mod-spawn-general-enable-resources-circle-shape=出生资源存放形状
+oarc-mod-spawn-general-enable-force-grass=强制出生区域为草地
+oarc-mod-spawn-general-shape=出生区域形状
+oarc-mod-resource-placement-enabled=起始资源自动放置
+oarc-mod-resource-placement-distance-to-edge=起始资源到边缘距离
+oarc-mod-resource-placement-degrees-offset=起始资源角度偏移
+oarc-mod-resource-placement-degrees-final=起始资源最终角度
+oarc-mod-resource-placement-vertical-offset=起始资源垂直偏移
+oarc-mod-resource-placement-horizontal-offset=起始资源水平偏移
+oarc-mod-resource-placement-linear-spacing=起始资源线性间距
+oarc-mod-resource-placement-size-multiplier=起始资源大小倍数
+oarc-mod-resource-placement-amount-multiplier=起始资源数量倍数
 
 [mod-setting-description]
-oarc-mod-default-allow-spawning-on-other-surfaces=This controls the default starting setting for whether to allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. [color=red]If you have other mods installed that add additional surfaces, I recommend leaving this disabled. Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu.[/color]
-oarc-mod-linked-chest-size=This is the size of the shared chest that players can use to share items with other players. This is only meaningful if the shared chest feature is enabled.
+oarc-mod-default-allow-spawning-on-other-surfaces=这控制了是否允许在其他表面出生的默认起始设置。如果启用，默认情况下所有其他表面都将可供玩家出生。[color=red]如果您安装了添加额外表面的其他模组，我建议禁用此选项。无论此设置如何，您都可以通过游戏内设置菜单配置哪些表面允许出生。[/color]
+oarc-mod-linked-chest-size=这是玩家可用于与其他玩家共享物品的共享箱子大小。仅在启用共享箱子功能时有意义。
+oarc-mod-welcome-msg-title=这是玩家加入游戏时将显示的欢迎消息标题。
+oarc-mod-welcome-msg=这是玩家加入游戏时和信息面板中将显示的欢迎消息。[color=red]留一个空格以禁用。[/color]
+oarc-mod-discord-invite=在此放置您的Discord邀请链接，以便玩家可以在游戏内信息面板中轻松复制。[color=red]留一个空格以禁用。[/color]
+oarc-mod-enable-main-team=允许玩家加入主队伍。这是游戏开始时创建的默认队伍。这使玩家可以共享研究进度。\n[color=red][font=default-bold]您必须启用主队伍和独立队伍选项中的一个或两个。否则将默认仅允许主队伍。[/font][/color]
+oarc-mod-enable-separate-teams=允许玩家创建自己的队伍（仅限合作模式，无PVP）。这使玩家可以有自己的研究进度。\n[color=red][font=default-bold]您必须启用主队伍和独立队伍选项中的一个或两个。否则将默认仅允许主队伍。[/font][/color]
+oarc-mod-allow-moats-around-spawns=允许玩家选择周围有护城河的出生点。
+oarc-mod-enable-moat-bridging=如果出生区域被陆地包围，护城河将有一个小型陆地桥梁连接。
+oarc-mod-minimum-distance-to-existing-chunks=这是新出生点与现有区块（即使不可见）的最小距离。
+oarc-mod-near-spawn-distance=玩家可以选择从原点出生的最小距离。这用作搜索算法的起点，因此不是保证的距离。
+oarc-mod-far-spawn-distance=玩家可以选择从原点出生的最大距离。这用作搜索算法的起点，因此不是保证的距离。
+oarc-mod-enable-buddy-spawn=允许与伙伴一起出生。2名玩家可以在彼此旁边出生，并拥有自己的起始区域。
+oarc-mod-enable-offline-protection=这可以抑制对所有玩家离线的基地的敌人攻击。但不能100%保证！
+oarc-mod-enable-shared-team-vision=确保所有队伍都可以看到彼此的地图和雷达覆盖范围。
+oarc-mod-enable-shared-team-chat=所有队伍都可以看到彼此的聊天消息。
+oarc-mod-enable-shared-spawns=允许玩家与其他玩家共享他们的出生区域。
+oarc-mod-number-of-players-per-shared-spawn=可以加入共享出生点的玩家数量，包括原始玩家。
+oarc-mod-enable-friendly-fire=启用友军伤害。这样您可以射击自己的箱子（或用火车碾压朋友）。这允许您对自己的队伍造成伤害。
+oarc-mod-main-force-name=主队伍的名称。这是游戏开始时创建的默认队伍。
+oarc-mod-default-surface=如果玩家加入主队伍或不允许在其他表面出生，他们将在此默认表面出生。
+oarc-mod-enable-secondary-spawns=启用此选项将在玩家首次移动到新表面/星球时提供次要出生点。仅在允许其他表面单独出生时适用。
+oarc-mod-scale-resources-around-spawns=这会根据每个出生区域缩放资源，以避免远处的出生点紧邻非常丰富的矿藏。
+oarc-mod-modified-enemy-spawning=根据允许的出生距离全局缩放敌人生成，以避免每个出生点都被巨型蠕虫包围。
 
-oarc-mod-welcome-msg-title=This is the title of the welcome message that will be displayed to players when they join the game.
-oarc-mod-welcome-msg=This is the welcome message that will be displayed to players when they join the game and in the info panel. [color=red]Leave a single space to disable.[/color]
-oarc-mod-discord-invite=Place your discord invite here so players can easily copy it from the in game info panel. [color=red]Leave a single space to disable.[/color]
+oarc-mod-minimum-online-time=玩家在离开前必须在线的最短时间，否则他们的出生区域将被清理。
+oarc-mod-respawn-cooldown-min=玩家在可以将出生点更改为新位置之前必须等待的最短时间。
+oarc-mod-enable-shared-power=这允许玩家与其他玩家共享其电力网络。它将在其出生点创建一个特殊的电力杆，该电力杆可以无线连接到共享电力网络。
+oarc-mod-enable-shared-chest=这为玩家提供了一个特殊的箱子，他们可以用它与其他玩家共享物品。它使用Factorio中的"链接箱子"隐藏功能。
+oarc-mod-enable-coin-shop=这启用了一个硬币商店，玩家可以用杀死虫群获得的硬币购买物品。
+oarc-mod-enable-regrowth=启用重生。这会随着时间慢慢移除非活跃的区块。任何包含玩家建筑的区块都不会被移除。这有助于随着时间推移保持地图（和文件大小）较小。
+oarc-mod-enable-world-eater=启用世界吞噬者。这需要重生功能。它会缓慢检查所有区块是否缺少玩家建筑和实体，并将其标记为待移除。这有助于随着时间推移保持地图（和文件大小）较小。这更多是一个实验性功能，使用时请自担风险。
+oarc-mod-enable-abandoned-base-cleanup=如果玩家在加入后很短时间内离开，将清理其废弃的基地。[color=red]这不需要启用重生或世界吞噬者。[/color]
+oarc-mod-regrowth-cleanup-interval-min=这是重生清理运行的间隔（分钟）。每次地图清理时，游戏都会冻结一秒，所以您不想运行得太频繁！废弃基地清理在玩家离开时立即发生，不受此设置影响。
+oarc-mod-spawn-general-radius-tiles=这是出生区域的半径（以图块为单位）。我建议不要将其缩小到2个区块（64）以下，也不要太大，否则生成出生点将需要很长时间。
+oarc-mod-spawn-general-moat-width-tiles=如果启用并在出生时选择了护城河，这是出生区域周围护城河的宽度（以图块为单位）。
+oarc-mod-spawn-general-tree-width-tiles=这是出生区域周围树木环的宽度（以图块为单位）。它保证出生点附近有一些树木。
+oarc-mod-spawn-general-enable-resources-circle-shape=这是起始区域资源存放的形状。
+oarc-mod-spawn-general-enable-force-grass=启用此选项将使整个出生区域变成纯草地。禁用将根据需要使用填海造地。
+oarc-mod-spawn-general-shape=这是出生区域的形状。
+oarc-mod-resource-placement-enabled=除非您在自定义场景中手动指定资源放置，否则应保持此项启用！
+oarc-mod-resource-placement-distance-to-edge=这是资源放置距离出生区域边缘的距离。仅适用于圆形/八边形形状的出生点。
+oarc-mod-resource-placement-degrees-offset=这是资源放置的起始角度偏移（以度为单位）。资源从此角度开始放置，0度表示东，90度表示南。资源将以顺时针方向从此角度开始放置。仅适用于圆形或八边形的出生点。
+oarc-mod-resource-placement-degrees-final=这是资源放置的终止角度偏移（以度为单位）。资源在此角度结束放置，0度表示东，90度表示南。资源将以顺时针方向在此角度结束放置。仅适用于圆形或八边形的出生点。
+oarc-mod-resource-placement-vertical-offset=这是资源从出生点左上角垂直方向的偏移量（以格子为单位）。仅适用于方形的出生点。
+oarc-mod-resource-placement-horizontal-offset=这是资源从出生点左上角水平方向的偏移量（以格子为单位）。仅适用于方形的出生点。
+oarc-mod-resource-placement-linear-spacing=这是资源之间的线性间距（以格子为单位）。仅适用于方形的出生点。
+oarc-mod-resource-placement-size-multiplier=此参数调整资源矿床的大小。默认设置应提供接近原版的起始体验。
+oarc-mod-resource-placement-amount-multiplier=此参数调整资源矿床的丰度。默认设置应提供接近原版的起始体验。
 
-oarc-mod-enable-main-team=Allow players to join the main team. This is the default team that is created when the game starts. This lets players share research progress.\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
-oarc-mod-enable-separate-teams=Allow players to start their own teams (CO-OP only, No PVP). This lets players have their own research progress.\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
-
-oarc-mod-allow-moats-around-spawns=Allow players to choose spawns with a moat around them.
-oarc-mod-enable-moat-bridging=If the spawn area is surrounded by land, the moat will have a small land bridge connecting it.
-oarc-mod-minimum-distance-to-existing-chunks=This is the minimum distance a new spawn will be created from existing chunks (even if not visible).
-oarc-mod-near-spawn-distance=The minimum distance a player can choose to spawn from the origin. This is used as a starting point for the search algorithm so is not a guaranteed distance.
-oarc-mod-far-spawn-distance=The maximum distance a player can choose to spawn from the origin. This is used as a starting point for the search algorithm so is not a guaranteed distance.
-
-oarc-mod-enable-buddy-spawn=Allow spawning with a buddy. 2 players can spawn next to each other with their own starting areas.
-oarc-mod-enable-offline-protection=This inhibits enemy attacks on bases where all players are offline. Not 100% guaranteed!
-oarc-mod-enable-shared-team-vision=Makes sure all teams can see each other's map and radar coverage.
-oarc-mod-enable-shared-team-chat=All teams can see each other's chat messages.
-oarc-mod-enable-shared-spawns=Allow players to share their spawn areas for other players to join.
-oarc-mod-number-of-players-per-shared-spawn=Number of players that can join a shared spawn, including the original player.
-oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chests (or run over your friends with a train). This lets you damage your OWN team.
-
-oarc-mod-main-force-name=The name of the main force. This is the default team that is created when the game starts.
-oarc-mod-default-surface=The default surface that players will spawn on if they join the main team or if spawning on other surfaces is not enabled.
-oarc-mod-enable-secondary-spawns=Enabling this will provide players with a secondary spawn point when they first move to a new surface/planet. This is only applicable if the other surface is enabled for separate spawns.
-
-oarc-mod-scale-resources-around-spawns=This scales resources around every spawn area so far away spawns aren't immediately next to very rich deposits.
-oarc-mod-modified-enemy-spawning=This scales the enemy spawning globally based on the allowed spawn distances to avoid every spawn being surrounded by behemoth worms.
-# oarc-mod-modified-enemy-easy-evo=This is the maximum evolution that the enemies in the warning zone (closest) to a spawn will be FIXED at to ensure all players have a safe start! The warning zone area can be configured via the custom scenario.
-# oarc-mod-modified-enemy-medium-evo=This is the maximum evolution that the enemies in the danger zone (next closest) to a spawn will be allowed to reach. Helps ensure players have a safe start! The danger zone area can be configured via the custom scenario.
-oarc-mod-minimum-online-time=The minimum time a player must be online before they leave, otherwise their spawn area will be cleaned up.
-oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they can change their spawn point to a new location.
-oarc-mod-enable-shared-power=This allows players to share their power network with other players. It will create a special power pole at their spawn point that connects to the shared power network wirelessly.
-oarc-mod-enable-shared-chest=This gives players a special chest they can use to share items with other players. It uses the "linked-chest" item that is a hidden feature in factorio.
-oarc-mod-enable-coin-shop=This enables a coin shop where players can buy items with coins they earn from killing biters.
-
-oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks over time. Any chunk with player structures will not be removed. This helps to keep the map (and file size) smaller over time.
-oarc-mod-enable-world-eater=Enables world eater. This requires regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
-oarc-mod-enable-abandoned-base-cleanup=Abandoned bases will be cleaned up if players leave within a short time of joining. [color=red]This does NOT require regrowth or world eater to be enabled.[/color]
-oarc-mod-regrowth-cleanup-interval-min=This is the interval in minutes that the regrowth cleanup will run. Whenever a map cleanup happens, the game freezes for a second, so you don't want to run this too often! Abandoned base cleanup happens immediately when a player leaves and is not affected by this setting.
-
-oarc-mod-spawn-general-radius-tiles=This is the radius of the spawn area in tiles. I would not make this much smaller then 2 chunks (64) and not too huge unless you want spawns to take a long time to generate.
-oarc-mod-spawn-general-moat-width-tiles=This is the width of the moat around the spawn area in tiles, if a moat is enabled and selected at spawn time.
-oarc-mod-spawn-general-tree-width-tiles=This is the width of the tree ring around the spawn area in tiles. It guarantees some trees near to spawn.
-oarc-mod-spawn-general-enable-resources-circle-shape=This is the shape of the starting area resource deposits.
-oarc-mod-spawn-general-enable-force-grass=Enabling this will make the entire spawn area pure grass. Disabling will use landfill as needed instead.
-oarc-mod-spawn-general-shape=This is the shape of the spawn area.
-
-oarc-mod-resource-placement-enabled=You should leave this enabled unless you are manually specifying resource placements in the custom scenario!
-oarc-mod-resource-placement-distance-to-edge=This is the distance from the edge of the spawn area that resources will be placed. Only applicable for circle/octagon shaped spawns.
-oarc-mod-resource-placement-degrees-offset=This is the starting angle offset (in degrees) for the resource placement. At what angle (in degrees) do resources start.  0 = east. 90 = south. Resources are placed clockwise starting at this angle. Only applicable for circle/octagon shaped spawns.
-oarc-mod-resource-placement-degrees-final=This is the final angle offset (in degrees) for the resource placement. At what angle (in degrees) do resources end. 0 = east. 90 = south. Resources are placed clockwise ending at this angle. Only applicable for circle/octagon shaped spawns.
-oarc-mod-resource-placement-vertical-offset=This is the vertical offset (in tiles) for the resource placement from the top-left of the spawn. Only applicable for square shaped spawns.
-oarc-mod-resource-placement-horizontal-offset=This is the horizontal offset (in tiles) for the resource placement from the top-left of the spawn. Only applicable for square shaped spawns.
-oarc-mod-resource-placement-linear-spacing=This is the linear spacing (in tiles) between resources. Only applicable for square shaped spawns.
-oarc-mod-resource-placement-size-multiplier=This changes the size of the resource deposits. Default settings should provide close to a vanilla starting experience.
-oarc-mod-resource-placement-amount-multiplier=This changes the richness of the resource deposits. Default settings should provide close to a vanilla starting experience.
