update zh-CN locale

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -78,12 +78,15 @@ oarc-generating-spawn-please-wait=正在生成你的生成点，请稍等...
 oarc-host-left-new-host=__1__ 已离开，因此 __2__ 现在拥有他们的基地。
 oarc-new-owner-msg=你已被赋予该基地的所有权！
 
+oarc-player-changed-surface=__1__ 现在位于 __2__！
+oarc-player-on-platform=__1__ 现在位于平台: __2__！
 
 oarc-looking-for-buddy=__1__ 正在寻找伙伴。
 
 oarc-avail-bases-join=可加入的基地：
 oarc-spawn-spots-remaining=__1__（剩余 __2__ 个位置）
 oarc-cancel-button-caption=取消
+oarc-confirm-button-caption=确认
 oarc-return-to-previous-tooltip=返回上一菜单。
 oarc-player-requesting-join-you=__1__ 请求加入你的基地！
 oarc-waiting-for-spawn-owner=等待生成点主人回应...
@@ -106,27 +109,37 @@ oarc-secondary-spawn-info-surface-label=次要基地：__1__（x=__2__，y=__3__
 oarc-spawn-info-location-button=显示地图位置
 oarc-spawn-info-location-button-tooltip=点击以在地图上显示位置。
 
-oarc-spawn-gps-location=位置：
-oarc-shared-spawn-controls=共享生成控件
+oarc-player-reset-header=玩家重置
+oarc-player-reset-note=这将允许你[color=red][font=default-bold]重置[/font][/color]你的角色并选择新的出生点选项。如果你创建了自己的出生点，它将被[color=red][font=default-bold]删除[/font][/color]，或在有其他玩家加入的情况下转交给他们。如果你在一个共享基地中，你将被[color=red][font=default-bold]移除[/font][/color]。此操作[color=red][font=default-bold]无法撤销[/font][/color]。
+oarc-player-reset=重置
+oarc-player-reset-tooltip=点击此按钮后会有确认对话框。请谨慎操作！
+oarc-spawn-controls-disabled-delayed=出生点仍在生成中！在被传送到新的出生点后请刷新此标签页。
+oarc-player-reset-are-you-sure=你确定要重置吗？
+oarc-player-was-reset-notify=__1__ 已重置！
+
+oarc-spawn-gps-location=重生位置：
+oarc-shared-spawn-controls=共享出生点控制
 oarc-shared-spawn-allow-joiners=允许其他玩家加入你的基地。
-oarc-shared-spawn-full=你的基地已满！不能再有玩家加入。
+oarc-shared-spawn-full=你的基地已满！无法容纳更多玩家。
 
-oarc-set-respawn-loc-header=重生位置
-oarc-no-respawn-this-surface=你不能在这个表面上设置自定义重生位置。
-oarc-set-respawn-loc-info-surface-label=当前表面重生位置：__1__（x=__2__，y=__3__）
-oarc-set-respawn-loc=设置重生位置
-oarc-set-respawn-loc-tooltip=这将把你的重生点设置为你当前位置。在再次更改之前有一个冷却时间。你只能在支持的表面上设置。
-oarc-set-respawn-loc-cooldown=设置重生冷却剩余时间：__1__
-oarc-set-respawn-note=这将把你的重生点设置为你当前位置。切换标签页以更新计时器。
+oarc-set-respawn-loc-header=重生点位置
+oarc-no-respawn-this-surface=你不能在此空间（星球）设置自定义重生点。
+oarc-no-valid-player-character=未找到与玩家关联的有效角色！
+oarc-player-character-in-vehicle=使用此功能时玩家不能在载具中！
+oarc-set-respawn-loc-info-surface-label=当前空间（星球）重生点：__1__（x=__2__，y=__3__）
+oarc-set-respawn-loc=设置重生点
+oarc-set-respawn-loc-tooltip=这将把你的重生点设置在当前位置。更改后需要等待冷却时间才能再次修改。你只能在支持的空间（星球）上设置重生点。
+oarc-set-respawn-loc-cooldown=设置重生点剩余冷却时间：__1__
+oarc-set-respawn-note=这将把你的重生点设置在当前位置。切换标签页以更新计时器。
 
-oarc-join-queue-header=共享生成队列
+oarc-join-queue-header=共享出生点队列
 oarc-select-player-join-queue=从加入队列中选择一个玩家：
 
 oarc-accept=接受
 oarc-reject=拒绝
 
-oarc-enabled=启用
-oarc-disabled=禁用
+oarc-enabled=已启用
+oarc-disabled=已禁用
 
 oarc-no-player-join-reqs=当前没有玩家请求加入你的基地。
 
@@ -168,7 +181,7 @@ oarc-buddy-cancel-request=__1__ 取消了他们的伙伴请求！
 oarc-buddy-requesting-from-you=__1__ 请求与你进行伙伴生成！
 
 # [BUDDY NAME] oarc-buddy-txt-would-like {team choice} oarc-buddy-txt-next-to-you {moat choice} {surface choice} {distance choice}
-oarc-buddy-txt-would-like= 想要加入 
+oarc-buddy-txt-would-like= 想要加入
 oarc-buddy-txt-main-team=主队伍
 oarc-buddy-txt-new-teams=单独队伍
 oarc-buddy-txt-buddy-team=伙伴队伍
@@ -176,6 +189,7 @@ oarc-buddy-txt-next-to-you= 在你旁边
 oarc-buddy-txt-moat= 被护城河环绕
 oarc-buddy-txt-surface= 在 __1__
 oarc-buddy-txt-distance= 在距离地图中心 __1__ 块的位置！
+
 
 oarc-buddy-declined=__1__ 拒绝了你的伙伴请求！
 
@@ -192,8 +206,8 @@ oarc-surface-config-tab-title=表面配置
 oarc-item-shop-tab-title=[item=coin]商店
 
 oarc-server-info-tab-welcome-msg-title=欢迎信息
-oarc-server-info-tab-discord-invite=Discord 邀请：
-oarc-server-info-tab-discord-invite-tooltip=来加入 Discord（复制此邀请）！
+oarc-server-info-tab-discord-invite=群邀请：
+oarc-server-info-tab-discord-invite-tooltip=入群（复制此群号）！
 oarc-server-info-tab-map-info-label=地图信息
 oarc-server-info-tab-server-run-time=服务器运行时间：__1__
 oarc-server-info-leave-warning=如果你在加入后 __1__ 分钟内离开，你的基地和角色将被删除。
