--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -40,7 +40,7 @@ oarc-spawn-menu-solo-header=Create Your Own Spawn
 oarc-spawn-menu-shared-header=Join Another Spawn
 oarc-spawn-menu-buddy-header=Create A Buddy Spawn
 
-oarc-spawn-distance-slider-label=Distance From Map Center: 
+oarc-spawn-distance-slider-label=Distance From Map Center:
 oarc-spawn-distance-slider-tooltip=This is the minimum distance from the center of the map in chunks that you will spawn. You may spawn further away if the map has already been explored. Resources and enemies are both more abundant the further you go from the center, but you will still be guaranteed a safe starting area.
 
 oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
@@ -117,7 +117,7 @@ oarc-spawn-controls-disabled-delayed=Spawn is still generating! Refresh this tab
 oarc-player-reset-are-you-sure=Are you sure you want to reset?
 oarc-player-was-reset-notify=__1__ was reset!
 
-oarc-spawn-gps-location=Location: 
+oarc-spawn-gps-location=Location:
 oarc-shared-spawn-controls=Shared Spawn Controls
 oarc-shared-spawn-allow-joiners=Allow others to join your base.
 oarc-shared-spawn-full=Your base is full! No more players can join.
@@ -165,7 +165,7 @@ oarc-buddy-spawn-request-header=Buddy Request!
 
 oarc-buddy-refresh=Refresh Buddy List
 oarc-create-buddy-team=Create Your Own Buddy Team (buddy and you share research)
-oarc-create-buddy-team-tooltip=If this is enabled, you and your buddy will share research progress. 
+oarc-create-buddy-team-tooltip=If this is enabled, you and your buddy will share research progress.
 
 oarc-buddy-spawn-near=Request Buddy Spawn (Near)
 oarc-buddy-spawn-far=Request Buddy Spawn (Far)
@@ -181,7 +181,7 @@ oarc-buddy-cancel-request=__1__ cancelled their buddy request!
 oarc-buddy-requesting-from-you=__1__ is requesting a buddy spawn from you!
 
 # [BUDDY NAME] oarc-buddy-txt-would-like {team choice} oarc-buddy-txt-next-to-you {moat choice} {surface choice} {distance choice}
-oarc-buddy-txt-would-like= would like to join 
+oarc-buddy-txt-would-like= would like to join
 oarc-buddy-txt-main-team=the main team
 oarc-buddy-txt-new-teams=on separate teams
 oarc-buddy-txt-buddy-team=a buddy team
@@ -294,6 +294,9 @@ oarc-mod-faq-shared-power=What is the shared power feature?
 oarc-mod-faq-shared-power-answer=This allows players to share their power network with other players. It will create a special power pole at their spawn point that connects to the shared power network wirelessly. It utilizes cross-surface power poles to make "wireless" connections.
 oarc-mod-faq-shared-chest=What is the shared chest feature?
 oarc-mod-faq-shared-chest-answer=This gives players a special chest at their spawn area that they can use to share items with other players. It uses the "linked-chest" item that is a hidden feature in Factorio. This allows players to share items with other players in a secure way.
+
+oarc-surface-settings-warning=This lets you configure the surface settings, it is only available to admins. These settings are NOT available in the mod settings page. If you want to automatically set these on the start of a new game using a custom file, please check out the included template scenario in the mod folder. I really question my sanity for bothering to make this GUI interface. Send help.
+oarc-surface-settings-warning=WARNING: These settings are NOT sanitized, you might crash the game if you pick bad values!
 
 
 [entity-name]
