--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -295,9 +295,37 @@ oarc-mod-faq-shared-power-answer=This allows players to share their power networ
 oarc-mod-faq-shared-chest=What is the shared chest feature?
 oarc-mod-faq-shared-chest-answer=This gives players a special chest at their spawn area that they can use to share items with other players. It uses the "linked-chest" item that is a hidden feature in Factorio. This allows players to share items with other players in a secure way.
 
-oarc-surface-settings-warning=This lets you configure the surface settings, it is only available to admins. These settings are NOT available in the mod settings page. If you want to automatically set these on the start of a new game using a custom file, please check out the included template scenario in the mod folder. I really question my sanity for bothering to make this GUI interface. Send help.
+oarc-surface-settings-info=This lets you configure the surface settings, it is only available to admins. These settings are NOT available in the mod settings page. If you want to automatically set these on the start of a new game using a custom file, please check out the included template scenario in the mod folder. I really question my sanity for bothering to make this GUI interface. Send help.
 oarc-surface-settings-warning=WARNING: These settings are NOT sanitized, you might crash the game if you pick bad values!
 
+oarc-label-starting-respawn-items=Starting And Respawn Items
+oarc-label-starting-items=Starting Items
+oarc-label-respawn-items=Respawn Items
+oarc-label-crashed-ship-items=Crashed Ship Items
+oarc-label-crashed-ship-max=Crashed Ship (Max 5)
+oarc-label-ship-wreckage-max=Ship Wreckage (Max 1)
+oarc-label-spawn-area-resources=Spawn Area Resources
+oarc-label-spawn-area-misc=Spawn Area Misc
+
+oarc-label-starting-respawn-items=Starting And Respawn Items
+oarc-label-starting-items=Starting Items
+oarc-label-respawn-items=Respawn Items
+oarc-label-crashed-ship-items=Crashed Ship Items
+oarc-label-crashed-ship-max=Crashed Ship (Max 5)
+oarc-label-ship-wreckage-max=Ship Wreckage (Max 1)
+oarc-label-spawn-area-resources=Spawn Area Resources
+oarc-label-spawn-area-misc=Spawn Area Misc
+oarc-select-surface-label=Select Surface:
+oarc-select-surface-tooltip=Select the surface you want to configure.
+oarc-revert-button=Revert
+oarc-revert-tooltip=Revert to default.
+oarc-copy-nauvis-button=Copy Nauvis
+oarc-copy-nauvis-tooltip=Copy Nauvis settings to this surface.
+
+oarc-add-item-tooltip=Add Item
+
+oarc-crash-site-enable-label=Enable Crashed Ship:
+oarc-crash-site-enable-tooltip=Enables the factorio style ship crash with items. If this is disabled, the crashed ship items and wreckage won't do anything.
 
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
