--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -40,7 +40,7 @@ oarc-spawn-menu-solo-header=Eigenen Spawn erstellen
 oarc-spawn-menu-shared-header=Einem anderen Spawn beitreten
 oarc-spawn-menu-buddy-header=Einen Buddy-Spawn erstellen
 
-oarc-spawn-distance-slider-label=Abstand vom Kartenzentrum: 
+oarc-spawn-distance-slider-label=Abstand vom Kartenzentrum:
 oarc-spawn-distance-slider-tooltip=Dies ist der Mindestabstand in Chunks vom Zentrum der Karte, in dem du spawnst. Du könntest weiter entfernt spawnen, wenn die Karte bereits erkundet wurde. Ressourcen und Feinde sind weiter vom Zentrum entfernt zahlreicher, aber du erhältst immer noch ein sicheres Startgebiet.
 
 oarc-starting-area-normal=Du spawnst in einem neuen Gebiet mit vorgegebenen Startressourcen.
@@ -281,6 +281,38 @@ oarc-mod-faq-shared-power=Was ist die Funktion „Gemeinschaftsstrom“?
 oarc-mod-faq-shared-power-answer=Dies ermöglicht es Spielern, ihr Stromnetz mit anderen Spielern zu teilen. Es wird ein spezieller Strommast an ihrem Spawn-Punkt erstellt, der drahtlos mit dem gemeinsamen Stromnetz verbunden ist. Es verwendet oberflächenübergreifende Strommasten, um „drahtlose“ Verbindungen herzustellen.
 oarc-mod-faq-shared-chest=Was ist die Funktion „Gemeinschaftstruhe“?
 oarc-mod-faq-shared-chest-answer=Dies gibt Spielern eine spezielle Truhe in ihrem Spawn-Gebiet, die sie nutzen können, um Gegenstände sicher mit anderen Spielern zu teilen. Es verwendet die „Linked-Chest“, eine versteckte Funktion in Factorio. Dies ermöglicht es Spielern, sicher Gegenstände mit anderen zu teilen.
+
+oarc-surface-settings-info=Hiermit können Sie die Oberflächeneinstellungen konfigurieren. Diese Funktion ist nur für Administratoren verfügbar. Diese Einstellungen sind NICHT auf der Mod-Einstellungsseite verfügbar. Wenn Sie diese Einstellungen beim Start eines neuen Spiels automatisch mithilfe einer benutzerdefinierten Datei festlegen möchten, sehen Sie sich bitte das im Mod-Ordner enthaltene Vorlagenszenario an. Ich frage mich wirklich, warum ich mir die Mühe gemacht habe, dieses GUI-Interface zu erstellen. Bitte um Hilfe.
+oarc-surface-settings-warning=WARNUNG: Diese Einstellungen sind NICHT bereinigt. Das Spiel könnte abstürzen, wenn Sie schlechte Werte auswählen!
+
+oarc-label-starting-respawn-items=Start- und Wiederbelebungsgegenstände
+oarc-label-starting-items=Startgegenstände
+oarc-label-respawn-items=Wiederbelebungsgegenstände
+oarc-label-crashed-ship-items=Gegenstände des abgestürzten Schiffs
+oarc-label-crashed-ship-max=Abgestürztes Schiff (Max. 5)
+oarc-label-ship-wreckage-max=Schiffswrack (Max. 1)
+oarc-label-spawn-area-resources=Ressourcen des Spawn-Gebiets
+oarc-label-spawn-area-misc=Verschiedenes im Spawn-Gebiet
+
+oarc-label-starting-respawn-items=Start- und Wiederbelebungsgegenstände
+oarc-label-starting-items=Startgegenstände
+oarc-label-respawn-items=Wiederbelebungsgegenstände
+oarc-label-crashed-ship-items=Gegenstände des abgestürzten Schiffs
+oarc-label-crashed-ship-max=Abgestürztes Schiff (Max. 5)
+oarc-label-ship-wreckage-max=Schiffswrack (Max. 1)
+oarc-label-spawn-area-resources=Ressourcen des Spawn-Gebiets
+oarc-label-spawn-area-misc=Verschiedenes im Spawn-Gebiet
+oarc-select-surface-label=Oberfläche auswählen:
+oarc-select-surface-tooltip=Wählen Sie die Oberfläche, die Sie konfigurieren möchten.
+oarc-revert-button=Zurücksetzen
+oarc-revert-tooltip=Auf Standard zurücksetzen.
+oarc-copy-nauvis-button=Nauvis kopieren
+oarc-copy-nauvis-tooltip=Kopiere Nauvis-Einstellungen auf diese Oberfläche.
+
+oarc-add-item-tooltip=Gegenstand hinzufügen
+
+oarc-crash-site-enable-label=Abgestürztes Schiff aktivieren:
+oarc-crash-site-enable-tooltip=Aktiviert das abgestürzte Schiff im Factorio-Stil mit Gegenständen. Wenn diese Option deaktiviert ist, bewirken die Gegenstände und das Wrack des abgestürzten Schiffs nichts.
 
 
 [entity-name]
