--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -314,6 +314,54 @@ oarc-add-item-tooltip=Gegenstand hinzufügen
 oarc-crash-site-enable-label=Abgestürztes Schiff aktivieren:
 oarc-crash-site-enable-tooltip=Aktiviert das abgestürzte Schiff im Factorio-Stil mit Gegenständen. Wenn diese Option deaktiviert ist, bewirken die Gegenstände und das Wrack des abgestürzten Schiffs nichts.
 
+oarc-safe-area-config=Sicherheitsbereich-Konfiguration
+oarc-safe-area-tooltip=Dies steuert, wie sicher der Bereich um die Spawn-Punkte ist.
+oarc-safe-area-radius=Sicherheitsbereich-Radius
+oarc-safe-radius-tooltip=Dies ist der Radius in Chunks um den Spawn-Punkt, in dem keine Feinde erscheinen.
+oarc-warn-area-radius=Warnbereich-Radius
+oarc-warn-radius-tooltip=Dies ist der Radius in Chunks um den Spawn-Punkt, in dem die Anzahl der Feinde deutlich reduziert wird.
+oarc-warn-area-reduction=Warnbereich-Reduktion
+oarc-warn-reduction-tooltip=Dies ist der Reduktionsfaktor zur Verringerung der Feinde im Warnbereich. 10 bedeutet (1/10) der Feinde.
+oarc-danger-area-radius=Gefahrenbereich-Radius
+oarc-danger-radius-tooltip=Dies ist der Radius in Chunks um den Spawn-Punkt, in dem die Anzahl der Feinde leicht reduziert wird.
+oarc-danger-area-reduction=Gefahrenbereich-Reduktion
+oarc-danger-reduction-tooltip=Dies ist der Reduktionsfaktor zur Verringerung der Feinde im Gefahrenbereich. 10 bedeutet (1/10) der Feinde.
+
+oarc-solid-resources-config=Feststoff-Ressourcen-Konfiguration
+oarc-solid-resources-tooltip=Dies steuert die Ressourcen, die um den Spawn-Bereich erscheinen.
+
+oarc-fluid-resources-config=Flüssigkeitsressourcen-Konfiguration
+oarc-fluid-resources-tooltip=Dies steuert die Flüssigkeitsressourcen, die um den Spawn-Bereich erscheinen.
+oarc-fluid-type=Typ
+oarc-fluid-count=Anzahl
+oarc-fluid-amount=Menge
+
+oarc-misc-config=Sonstiges-Konfiguration
+oarc-water=Wasser
+oarc-water-length=Wasserlänge
+oarc-water-length-tooltip=Dies ist die Länge in Kacheln des Wasserstreifens um den Spawn-Bereich.
+oarc-water-x-offset=Wasser X-Versatz
+oarc-water-x-offset-tooltip=Dies ist der X-Versatz in Kacheln, gemessen vom Norden des Spawn-Bereichs.
+oarc-water-y-offset=Wasser Y-Versatz
+oarc-water-y-offset-tooltip=Dies ist der Y-Versatz in Kacheln, gemessen vom Norden des Spawn-Bereichs.
+
+oarc-shared-chest=Gemeinsame Truhe
+oarc-chest-x-offset=Truhe X-Versatz
+oarc-chest-x-offset-tooltip=Dies ist der X-Versatz in Kacheln, gemessen vom Osten des Spawn-Bereichs.
+oarc-chest-y-offset=Truhe Y-Versatz
+oarc-chest-y-offset-tooltip=Dies ist der Y-Versatz in Kacheln, gemessen vom Osten des Spawn-Bereichs.
+
+oarc-shared-power-pole=Gemeinsamer Strommast
+oarc-power-x-offset=Strom X-Versatz
+oarc-power-x-offset-tooltip=Dies ist der X-Versatz in Kacheln, gemessen vom Osten des Spawn-Bereichs.
+oarc-power-y-offset=Strom Y-Versatz
+oarc-power-y-offset-tooltip=Dies ist der Y-Versatz in Kacheln, gemessen vom Osten des Spawn-Bereichs.
+
+oarc-remove-item=Gegenstand entfernen
+oarc-remove-resource=Ressource entfernen
+oarc-add-item=Gegenstand hinzufügen
+oarc-add-fluid-resource=Flüssigkeitsressource hinzufügen
+
 
 [entity-name]
 oarc-linked-chest=OARC Gemeinschaftstruhe
