--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -327,6 +327,56 @@ oarc-add-item-tooltip=Add Item
 oarc-crash-site-enable-label=Enable Crashed Ship:
 oarc-crash-site-enable-tooltip=Enables the factorio style ship crash with items. If this is disabled, the crashed ship items and wreckage won't do anything.
 
+oarc-safe-area-config=Safe Area Config
+oarc-safe-area-tooltip=This controls how safe the area around the spawns is.
+oarc-safe-area-radius=Safe Area Radius
+oarc-safe-radius-tooltip=This is the radius in chunks around the spawn in which no enemies will spawn.
+oarc-warn-area-radius=Warn Area Radius
+oarc-warn-radius-tooltip=This is the radius in chunks around the spawn in which enemies will be significantly reduced.
+oarc-warn-area-reduction=Warn Area Reduction
+oarc-warn-reduction-tooltip=This is the reduction factor to reduce the number of enemies in the warn area. 10 means (1/10)th the number of enemies.
+oarc-danger-area-radius=Danger Area Radius
+oarc-danger-radius-tooltip=This is the radius in chunks around the spawn in which enemies will be slightly reduced.
+oarc-danger-area-reduction=Danger Area Reduction
+oarc-danger-reduction-tooltip=This is the reduction factor to reduce the number of enemies in the danger area. 10 means (1/10)th the number of enemies.
+
+oarc-solid-resources-config=Solid Resources Config
+oarc-solid-resources-tooltip=This controls the resources that will spawn around the spawn area.
+
+oarc-fluid-resources-config=Fluid Resources Config
+oarc-fluid-resources-tooltip=This controls the fluid resources that will spawn around the spawn area.
+oarc-fluid-type=Type
+oarc-fluid-count=Count
+oarc-fluid-amount=Amount
+
+oarc-misc-config=Misc Config
+oarc-water=Water
+oarc-water-length=Water Length
+oarc-water-length-tooltip=This is the length in tiles of the water strip around the spawn area.
+oarc-water-x-offset=Water X Offset
+oarc-water-x-offset-tooltip=This is the x_offset in tiles, from the north of the spawn area.
+oarc-water-y-offset=Water Y Offset
+oarc-water-y-offset-tooltip=This is the y_offset in tiles, from the north of the spawn area.
+
+oarc-shared-chest=Shared Chest
+oarc-chest-x-offset=Chest X Offset
+oarc-chest-x-offset-tooltip=This is the x_offset in tiles, from the east of the spawn area.
+oarc-chest-y-offset=Chest Y Offset
+oarc-chest-y-offset-tooltip=This is the y_offset in tiles, from the east of the spawn area.
+
+oarc-shared-power-pole=Shared Power Pole
+oarc-power-x-offset=Power X Offset
+oarc-power-x-offset-tooltip=This is the x_offset in tiles, from the east of the spawn area.
+oarc-power-y-offset=Power Y Offset
+oarc-power-y-offset-tooltip=This is the y_offset in tiles, from the east of the spawn area.
+
+oarc-remove-item=Remove Item
+oarc-remove-resource=Remove Resource
+oarc-add-item=Add Item
+oarc-add-fluid-resource=Add Fluid Resource
+
+
+
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
 oarc-linked-power=OARC Linked Power
