--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -327,6 +327,55 @@ oarc-add-item-tooltip=添加物品
 oarc-crash-site-enable-label=启用坠毁飞船：
 oarc-crash-site-enable-tooltip=启用异星工厂风格的飞船坠毁及其物品。如果禁用此选项，坠毁飞船的物品和残骸将不会生效。
 
+oarc-safe-area-config=安全区配置
+oarc-safe-area-tooltip=此设置控制出生点周围的安全区。
+oarc-safe-area-radius=安全区半径
+oarc-safe-radius-tooltip=这是出生点周围的区块半径范围内不生成敌人的区域。
+oarc-warn-area-radius=警告区半径
+oarc-warn-radius-tooltip=这是出生点周围的区块半径范围内敌人数量显著减少的区域。
+oarc-warn-area-reduction=警告区减少系数
+oarc-warn-reduction-tooltip=减少警告区敌人数量的减少系数。10 表示敌人数量为十分之一。
+oarc-danger-area-radius=危险区半径
+oarc-danger-radius-tooltip=这是出生点周围的区块半径范围内敌人数量略微减少的区域。
+oarc-danger-area-reduction=危险区减少系数
+oarc-danger-reduction-tooltip=减少危险区敌人数量的减少系数。10 表示敌人数量为十分之一。
+
+oarc-solid-resources-config=固体资源配置
+oarc-solid-resources-tooltip=此设置控制出生点周围将生成的资源。
+
+oarc-fluid-resources-config=流体资源配置
+oarc-fluid-resources-tooltip=此设置控制将在出生点周围生成的流体资源。
+oarc-fluid-type=类型
+oarc-fluid-count=数量
+oarc-fluid-amount=量
+
+
+oarc-misc-config=杂项配置
+oarc-water=水
+oarc-water-length=水的长度
+oarc-water-length-tooltip=这是出生点周围水带的长度（单位：格）。
+oarc-water-x-offset=水的 X 偏移
+oarc-water-x-offset-tooltip=这是从出生点北部的 x 轴偏移（单位：格）。
+oarc-water-y-offset=水的 Y 偏移
+oarc-water-y-offset-tooltip=这是从出生点北部的 y 轴偏移（单位：格）。
+
+oarc-shared-chest=共享箱
+oarc-chest-x-offset=箱的 X 偏移
+oarc-chest-x-offset-tooltip=这是从出生点东部的 x 轴偏移（单位：格）。
+oarc-chest-y-offset=箱的 Y 偏移
+oarc-chest-y-offset-tooltip=这是从出生点东部的 y 轴偏移（单位：格）。
+
+oarc-shared-power-pole=共享电线杆
+oarc-power-x-offset=电线杆 X 偏移
+oarc-power-x-offset-tooltip=这是从出生点东部的 x 轴偏移（单位：格）。
+oarc-power-y-offset=电线杆 Y 偏移
+oarc-power-y-offset-tooltip=这是从出生点东部的 y 轴偏移（单位：格）。
+
+oarc-remove-item=移除物品
+oarc-remove-resource=移除资源
+oarc-add-item=添加物品
+oarc-add-fluid-resource=添加流体资源
+
 [entity-name]
 oarc-linked-chest=OARC 链接箱子
 oarc-linked-power=OARC 链接电力
