--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -375,6 +375,12 @@ oarc-remove-resource=Remove Resource
 oarc-add-item=Add Item
 oarc-add-fluid-resource=Add Fluid Resource
 
+oarc-coins-available=Coins Available: __1__  [item=coin]
+oarc-broke-message=You're broke! Go kill some enemies or beg for change...
+
+oarc-character-invalid=Your character needs to be valid to use this! Make sure you are not inside a vehicle or dead!
+oarc-teleport-fail=Could not find a safe place to teleport the cargo pod!
+oarc-teleport-success=Teleported cargo pod to you!
 
 
 [entity-name]
