--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -376,6 +376,14 @@ oarc-remove-resource=移除资源
 oarc-add-item=添加物品
 oarc-add-fluid-resource=添加流体资源
 
+oarc-coins-available=可用金币：__1__  [item=coin]
+oarc-broke-message=你破产了！去杀些敌人或讨些零钱吧……
+
+oarc-character-invalid=要使用此功能，您的角色必须有效！确保您不在任何载具内或处于死亡状态！
+oarc-teleport-fail=找不到安全的地方来传送货舱！
+oarc-teleport-success=货舱已传送到您身边！
+
+
 [entity-name]
 oarc-linked-chest=OARC 链接箱子
 oarc-linked-power=OARC 链接电力
