--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -94,7 +94,7 @@ oarc-waiting-for-spawn-owner=等待生成点主人回应...
 oarc-you-will-spawn-once-host=一旦主持人选择“是”，你将生成...
 oarc-player-cancel-join-request=__1__ 取消了加入你的生成点的请求。
 
-oarc-spawn-ctrl=生成控件
+oarc-spawn-ctrl=重生选项
 oarc-primary-spawn-info-header=主要生成信息
 oarc-primary-spawn-info-note=这是你的基地位置。如果你允许其他玩家加入你的基地，他们将在这里生成。
 oarc-primary-spawn-info-surface-label=基地：__1__（x=__2__，y=__3__）
@@ -213,8 +213,8 @@ oarc-server-info-tab-server-run-time=服务器运行时间：__1__
 oarc-server-info-leave-warning=如果你在加入后 __1__ 分钟内离开，你的基地和角色将被删除。
 oarc-server-info-admin-controls=管理员控件
 oarc-server-info-ban-select-player=选择玩家：
-oarc-server-info-button-ban-player=禁止玩家
-oarc-server-info-button-restart-player=重启玩家
+oarc-server-info-button-ban-player=封禁他←
+oarc-server-info-button-restart-player=重启他←
 
 oarc-player-not-found=未找到玩家 __1__？
 oarc-player-about-to-spawn=玩家 __1__ 即将生成，请稍后再试。
