--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -6,7 +6,7 @@ description=此模组提供了一个彻底改革多人生成的场景。\n[color
 
 oarc-scenario-info-warn-msg=此场景允许玩家在远离地图中心的地方创建自己的生成点。要了解更多信息，请点击左上角的 OARC 按钮。
 
-oarc-experimental-warning=[color=red][font=default-bold]Factorio 2.0 和 太空时代 支持仍在测试阶段！！！请在 群 289362487 向我报告错误/提交建议，谢谢！[/font][/color]
+oarc-experimental-warning=[color=red][font=default-bold]Factorio 2.0 和 太空时代 支持仍在测试阶段！！！请在 群 289362487 向我报告错误/提交建议/参与翻译，谢谢！[/font][/color]
 
 oarc-i-understand=我明白
 oarc-spawn-options=生成选项
