add more locale

--- a/locale/zh-CN/locale-mod-settings.cfg
+++ b/locale/zh-CN/locale-mod-settings.cfg
@@ -97,7 +97,7 @@ oarc-mod-enable-shared-power=这允许玩家与其他玩家共享其电力网络
 oarc-mod-enable-shared-chest=这为玩家提供了一个特殊的箱子，他们可以用它与其他玩家共享物品。它使用Factorio中的"链接箱子"隐藏功能。
 oarc-mod-enable-coin-shop=这启用了一个硬币商店，玩家可以用杀死虫群获得的硬币购买物品。
 oarc-mod-enable-regrowth=启用重生。这会随着时间慢慢移除非活跃的区块。任何包含玩家建筑的区块都不会被移除。这有助于随着时间推移保持地图（和文件大小）较小。
-oarc-mod-enable-world-eater=启用世界吞噬者。这需要重生功能。它会缓慢检查所有区块是否缺少玩家建筑和实体，并将其标记为待移除。这有助于随着时间推移保持地图（和文件大小）较小。这更多是一个实验性功能，使用时请自担风险。
+oarc-mod-enable-world-eater=启用世界吞噬者。这需要重生功能。它会缓慢检查所有区块是否缺少玩家建筑和实体，并将其标记为待移除。这有助于随着时间推移保持地图（和文件大小）较小。这更多是一个实验性功能，使用有风险，开启需谨慎。
 oarc-mod-enable-abandoned-base-cleanup=如果玩家在加入后很短时间内离开，将清理其废弃的基地。[color=red]这不需要启用重生或世界吞噬者。[/color]
 oarc-mod-regrowth-cleanup-interval-min=这是重生清理运行的间隔（分钟）。每次地图清理时，游戏都会冻结一秒，所以您不想运行得太频繁！废弃基地清理在玩家离开时立即发生，不受此设置影响。
 oarc-mod-spawn-general-radius-tiles=这是出生区域的半径（以图块为单位）。我建议不要将其缩小到2个区块（64）以下，也不要太大，否则生成基地将需要很长时间。
