add more locale

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -373,6 +373,10 @@ oarc-character-invalid=Your character needs to be valid to use this! Make sure y
 oarc-teleport-fail=Could not find a safe place to teleport the cargo pod!
 oarc-teleport-success=Teleported cargo pod to you!
 
+oarc-cleanup-30sec-warning=Map cleanup in 30 seconds... Unused and old map chunks will be deleted!
+oarc-cleanup-force-30sec-warning=Map cleanup (forced) in 30 seconds... Unused and old map chunks will be deleted!
+oarc-cleanup-complete=Map cleanup done, sorry for your loss.
+
 
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
