--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -375,6 +375,9 @@ oarc-character-invalid=要使用此功能，您的角色必须有效！确保您
 oarc-teleport-fail=找不到安全的地方来传送货舱！
 oarc-teleport-success=货舱已传送到您身边！
 
+oarc-cleanup-30sec-warning=地图清理将在30秒后开始... 未使用和过期的地图区块将被删除！
+oarc-cleanup-force-30sec-warning=地图强制清理将在30秒后开始... 未使用和过期的地图区块将被删除！
+oarc-cleanup-complete=地图清理完成，服务器性能提升了。
 
 [entity-name]
 oarc-linked-chest=OARC 链接箱子
