--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -91,7 +91,7 @@ oarc-return-to-previous-tooltip=返回上一菜单。
 oarc-player-requesting-join-you=__1__ 请求加入你的基地！
 oarc-waiting-for-spawn-owner=等待基地主人回应...
 
-oarc-you-will-spawn-once-host=一旦主持人选择“是”，你将生成...
+oarc-you-will-spawn-once-host=一旦对方大佬选择是，你便会加入...
 oarc-player-cancel-join-request=__1__ 取消了加入你的基地的请求。
 
 oarc-spawn-ctrl=重生选项
@@ -167,8 +167,8 @@ oarc-buddy-refresh=刷新伙伴列表
 oarc-create-buddy-team=创建自己的伙伴队伍（伙伴和你共享科技）
 oarc-create-buddy-team-tooltip=如果启用，你和你的伙伴将共享科技进度。
 
-oarc-buddy-spawn-near=请求伙伴生成（附近）
-oarc-buddy-spawn-far=请求伙伴生成（远方）
+oarc-buddy-spawn-near=请求和好友同时出生（近）
+oarc-buddy-spawn-far=请求和好友同时出生（远）
 
 oarc-invalid-buddy=你尚未选择一个有效的伙伴！请再次尝试。
 oarc-buddy-not-avail=所选伙伴不再可用！请再次尝试。
@@ -183,7 +183,7 @@ oarc-buddy-requesting-from-you=__1__ 请求与你进行伙伴生成！
 # [BUDDY NAME] oarc-buddy-txt-would-like {team choice} oarc-buddy-txt-next-to-you {moat choice} {surface choice} {distance choice}
 oarc-buddy-txt-would-like= 想要加入
 oarc-buddy-txt-main-team=主队伍
-oarc-buddy-txt-new-teams=单独队伍
+oarc-buddy-txt-new-teams=独立队伍
 oarc-buddy-txt-buddy-team=伙伴队伍
 oarc-buddy-txt-next-to-you= 在你旁边
 oarc-buddy-txt-moat= 被护城河环绕
