--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -53,7 +53,7 @@ oarc-join-someone-info=你可以请求加入其他玩家的基地。这需要至
 
 oarc-no-shared-avail=目前没有可生成的共享基地。
 oarc-join-check-again=再次检查
-oarc-shared-spawn-disabled=在此模式下共享生成已禁用。
+oarc-shared-spawn-disabled=在此模式下共享基地已禁用。
 oarc-no-shared-spawn-selected=你尚未选择一个有效的玩家加入。请选择列表中的一个玩家。
 oarc-invalid-host-shared-spawn=所选玩家不再可用！请再次尝试。
 
@@ -95,8 +95,8 @@ oarc-you-will-spawn-once-host=一旦对方大佬选择是，你便会加入...
 oarc-player-cancel-join-request=__1__ 取消了加入你的基地的请求。
 
 oarc-spawn-ctrl=重生选项
-oarc-primary-spawn-info-header=主要生成信息
-oarc-primary-spawn-info-note=这是你的基地位置。如果你允许其他玩家加入你的基地，他们将在这里生成。
+oarc-primary-spawn-info-header=主要基地信息
+oarc-primary-spawn-info-note=这是你的基地位置。如果你允许其他玩家加入你的基地，他们将在这里出生。
 oarc-primary-spawn-info-surface-label=基地：__1__（x=__2__，y=__3__）
 
 oarc-teleport-home=传送至重生点
